samples/_failures_safe/1761299647_2e4a14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0664b2b.c: In function ‘main’:
./samples/SAFE/__tmp_e0664b2b.c:154:30: error: ‘add’ undeclared (first use in this function)
  154 |                 int status = add
      |                              ^~~
./samples/SAFE/__tmp_e0664b2b.c:154:30: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e0664b2b.c:154:17: error: expected ‘,’ or ‘;’ at end of input
  154 |                 int status = add
      |                 ^~~
./samples/SAFE/__tmp_e0664b2b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0664b2b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0664b2b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e0664b2b.c:154:17: error: expected declaration or statement at end of input
